# pydoll

./: .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  TODO.md  codecov.yml  cookies.json  cz.yaml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  refactoring.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  refactoring.md  release.md
.github/workflows/: deploy-docs.yml  mypy.yml  publish.yml  release.yml  ruff-ci.yml  tests.yml
api/: index.html
api/commands/: index.html
deep-dive/: index.html
deep-dive/browser-domain/: index.html
deep-dive/cdp/: index.html
deep-dive/connection-layer/: index.html
deep-dive/event-system/: index.html
deep-dive/find-elements-mixin/: index.html
deep-dive/network-capabilities/: index.html
deep-dive/page-domain/: index.html
deep-dive/tab-domain/: index.html
deep-dive/webelement-domain/: index.html
docs/: 404.html  features.md  index.html  index.md  landing-sitemap.xml  objects.inv  robots.txt  sitemap.xml
docs/api/: index.html  index.md
docs/deep-dive/: browser-domain.md  event-system.md  find-elements-mixin.md  index.html  index.md  network-capabilities.md  page-domain.md  tab-domain.md  webelement-domain.md
docs/en/: features.md  index.md
docs/features/: index.html
docs/landing/: index.html  script.js
docs/pt/: index.html  index.md
docs/stylesheets/: extra.css
docs/zh/: features.md  index.html  index.md
examples/: cloudflare_bypass.py
features/: index.html
public/: index.html  robots.txt  script.js  sitemap.xml
public/docs/: features.md  index.md
pydoll/: connection.py  constants.py  decorators.py  element.py  exceptions.py  utils.py
pydoll/browser/: __init__.py  base.py  chrome.py  constants.py  edge.py  interfaces.py  managers.py  options.py  page.py  tab.py
pydoll/commands/: __init__.py  browser.py  browser_commands.py  dom.py  dom_commands.py  fetch.py  fetch_commands.py  file_upload.py  input.py  input_commands.py  network.py  network_commands.py  page.py  page_commands.py  runtime.py  runtime_commands.py  storage.py  storage_commands.py  target.py  target_commands.py
pydoll/common/: keyboard.py  keys.py
pydoll/connection/: __init__.py  connection.py  connection_handler.py  managers.py
pydoll/elements/: web_element.py
pydoll/events/: __init__.py  browser.py  dom.py  fetch.py  network.py  page.py
pydoll/interactions/: __init__.py  iframe.py  keyboard.py  scroll.py
pydoll/mixins/: find_elements.py
pydoll/protocol/: __init__.py  base.py
search/: search_index.json
tests/: conftest.py  test_browser_commands.py  test_browser_managers.py  test_browser_options.py  test_browser_page.py  test_browser_window.py  test_chrome.py  test_connection.py  test_connection_handler.py  test_connection_managers.py  test_core_integration.py  test_decorators.py  test_dom_commands.py  test_edge.py  test_events.py  test_exceptions.py  test_fetch_commands.py  test_find_elements_mixin.py  test_get_special_key.py  test_iframe_integration.py  test_input_commands.py  test_network_commands.py  test_page_commands.py  test_runtime_commands.py  test_send_keys.py  test_send_modifiers_keys.py  test_storage_commands.py  test_target_commands.py  test_utils.py  test_web_element.py
tests/pages/: test_children.html  test_core_simple.html  test_iframe_content.html  test_iframe_nested.html  test_iframe_nested_level.html  test_iframe_parent_level.html  test_iframe_simple.html  test_multiple_iframes.html
tests/test_browser/: test_browser_base.py  test_browser_chrome.py  test_browser_edge.py  test_browser_options.py  test_browser_tab.py  test_requests_request.py  test_requests_response.py  test_tab_request_integration.py  test_tab_singleton.py
tests/test_commands/: test_browser_commands.py  test_dom_commands.py  test_fetch_commands.py  test_input_commands.py  test_network_commands.py  test_page_commands.py  test_runtime_commands.py  test_storage_commands.py  test_target_commands.py
zh/: index.html
(+552 files in other folders)
