[tool.poetry]
name = "pydoll-python"
version = "1.3.3"
description = ""
authors = ["Thalison Fernandes <thalissfernandes99@gmail.com>"]
readme = "README.md"
packages = [
    {include = "pydoll"}
]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^13.1"
aiohttp = "^3.9.5"
aiofiles = "^23.2.1"
bs4 = "^0.0.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
taskipy = "^1.14.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
aioresponses = "^0.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py310"


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
exclude = ['tests', 'tests/*']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
test = 'pytest -s -x --cov=pydoll -vv'
post_test = 'coverage html'